Adapt a minimal page appearance

--- a/index.html
+++ b/index.html
@@ -1,51 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Audio Reversing Game</title>
-    <script src="plotly.min.js"></script>
+    <title>Audio Reverser</title>
     <script src="wav.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1>The Audio Reversing Game</h1>
-    <h2>By <a href = "http://www.ctralie.com">Chris Tralie</a> for <a href = http://www.ctralie.com/Teaching/CS472A_S2021/">CS 472: Digital Music Processing</a></h2>
-    <p>The purpose of this exercise is to show students the waveform representation of audio, and to add a fun exercise on top of it.  When you record audio, it will show up as a plotted waveform below.  You can then play it back in reverse.  A fun challenge is to then open this in a new tab and try to match the sounds of the reversed speech, and see if the reverse of that sounds like the original.</p>
-    <p>
-      For context: I used to play this game for fun all the time with my friend <a href = "https://premiumbs.bandcamp.com/">Brendan Sellers</a> when we were messing around in his recording studio.
-    </p>
-    <table>
-      <tr>
-        <td>
-          <button id="start" onclick="startRecording()">⏺️ Start recording...</button>
-        </td>
-        <td>
-          <button id="stop" onclick="stopRecording()">⏹️ Stop recording...</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <button id = "play" onclick="playAudio()">▶️ Play Audio</button>
-        </td>
-        <td>
-          <button id = "playRev" onclick="playReversed()">▶️ Play Reversed</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <button id = "download" onclick="download()">Download Audio</button>
-        </td>
-        <td>
-          <button id = "downloadRev" onclick="downloadReversed()">Download Reversed Audio</button>
-        </td>
-      </tr>
-    </table>
-    
-
-    <div id="audioPlot"></div>
-
-    <h2>Video Example</h2>
-    <p>Below is a video example of how this works</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/j4P7p6rNaoI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </body>
+    <div class="buttons">
+      <button id="startStop" class="button button--startStop" aria-label="record audio" onclick="startStopRecording()"></button>
+      <button id = "play" class="button button--play" aria-label="play audio forwards" onclick="playForwards()" disabled></button>
+      <button id = "playRev" class="button button--play button--reverse" aria-label="play audio backwards" onclick="playBackwards()" disabled></button>
+    </div>
+</body>
 </html>
